created models,controllers,nginx config

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -9,5 +9,16 @@ services:
       - /app/node_modules
     environment:
       - NODE_ENV=development
+      - MONGO_USER=admin
+      - MONGO_PASSWORD=admin
+      - SESSION_SECRET=sosecret
+      
     command: npm run dev
-    
+  mongo:
+    environment:
+      - MONGO_INITDB_ROOT_USERNAME=admin
+      - MONGO_INITDB_ROOT_PASSWORD=admin
+
+  nginx:
+    ports:
+      - "3000:80"
