--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,28 @@
 services:
   node-app:
-    build: .
-    ports:
-      - "3000:3000"    
+    build: .   
     environment:
       - PORT=3000
+    depends_on:
+      - mongo
+
+  mongo:
+    image: mongo
+    environment:
+      - MONGO_INITDB_ROOT_USERNAME=admin
+      - MONGO_INITDB_ROOT_PASSWORD=admin
+    volumes:
+      - mongo-db:/data/db
+
+  redis:
+    image: redis
+
+  nginx:
+    image: nginx:stable-alpine
+    ports:
+      - "3000:80"
+    volumes:
+      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf:ro
+      
+volumes:
+  mongo-db:
