--- a/package.json
+++ b/package.json
@@ -11,7 +11,13 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "express": "^5.1.0"
+    "bcryptjs": "^3.0.2",
+    "connect-redis": "^6.0.0",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "express-session": "^1.18.2",
+    "mongoose": "^8.17.0",
+    "redis": "^4.6.7"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
